# HanAI

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  test_pipeline.py
backend/alembic/: env.py
backend/data/: acupuncture_points.csv  cli_test.py  collector.py  kcd8_u_codes.csv  neobogam_migration.py  rag_prescriptions.jsonl
backend/scripts/: generate_sam.py  seed_acupuncture_points.py  seed_claim_rejection_codes.py  seed_drug_master.py  seed_dummy_data.py  seed_fee_master.py  seed_kcd.py  seed_kcd_full.py  seed_kcd_u_codes.py  seed_standalone_procedures.py  validate_vad.py  verify_edi.py
backend/tests/: conftest.py  test_access_control_log.py  test_acupuncture.py  test_auth.py  test_billing.py  test_billing_fields.py  test_charting.py  test_charting_change_log.py  test_chuna_copay_split.py  test_chuna_integration.py  test_chuna_notice_rules.py  test_chuna_training_certification.py  test_claim_payment.py  test_claim_resubmission.py  test_claim_review_results.py  test_claim_sequence.py  test_claim_submit_reject.py  test_copayment.py  test_deidentifier.py  test_diagnosis.py  test_doctor_profile.py  test_doctor_work_days.py  test_edi_sample.py  test_hospitals_patch.py  test_kcd_complete_code_validation.py  test_kcd_search.py  test_kcd_validate.py  test_manage_db_export.py  test_masters.py  test_notice_rules.py  test_notice_rules_unit.py  test_patients.py  test_patients_patch.py  test_prescription.py  test_procedure_standalone.py  test_reception_queue.py  test_stt.py  (+3 more)
(+347 files in other folders)
